About Section is complete with Style and Responsive CSS

--- a/index.html
+++ b/index.html
@@ -6,8 +6,40 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>rossa.co</title>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+
+  <!-- Custom CSS style -->
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- Responsive CSS -->
+  <link rel="stylesheet" href="css/responsive.css">
+
 </head>
 <body>
-  <h1>Rossa McLaughlin</h1>
+
+<main>
+  <section class="r-section is-theme-navy" id="about">
+    <canvas class="r-canvas" resize="true"></canvas>
+    <header class="r-overview r-overview--hero">
+      <h1 class="r-overview__heading">
+        Mobile first web development with <abbr class="t-mark--red" title="Hyper Text Markup Language">HTML</abbr>,
+        <abbr class="t-mark--green" title="Cascading Style Sheets">CSS</abbr>,
+        <mark class="t-mark--yellow">JavaScript</mark> and
+        <mark class="t-mark--purple">jQuery</mark>.
+      </h1>
+      <p class="r-overview__summary">
+        My name is Rossa McLaughlin. I am a frontend web developer based in Strabane, Northern Ireland and I would
+        like to help build your website.
+      </p>
+      <p class="r-overview__summary">
+        <a class="r-button r-overview__button" href="#">Find out more</a>
+      </p>
+    </header>
+  </section>
+</main>
+
 </body>
 </html>
